--- a/app/src/main/res/layout/character_layout.xml
+++ b/app/src/main/res/layout/character_layout.xml
@@ -31,6 +31,8 @@
         android:id="@+id/character_type"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:onClick="getCharacterbyType"
+        android:focusable="false"
         android:textSize="@dimen/text_size"/>
 
     <androidx.appcompat.widget.AppCompatTextView
