--- a/app/src/main/res/layout/row_layout.xml
+++ b/app/src/main/res/layout/row_layout.xml
@@ -19,6 +19,8 @@
         android:id="@+id/location_type"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:onClick="getLocationbyType"
+        android:focusable="false"
         android:textSize="@dimen/text_size"/>
 
     <androidx.appcompat.widget.AppCompatTextView
