--- a/app/src/main/res/layout/character_layout.xml
+++ b/app/src/main/res/layout/character_layout.xml
@@ -57,6 +57,6 @@
         android:textOn=""
         android:background="@drawable/button_favorite"
         android:focusable="false"
-        android:onClick="onToggleClicked"/>
+        android:onClick="onToggleClickedCharacter"/>
 
 </LinearLayout>
