--- a/app/src/main/res/layout/character_layout.xml
+++ b/app/src/main/res/layout/character_layout.xml
@@ -1,30 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:padding="20dp">
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/character_id"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:visibility="gone"
         android:textSize="@dimen/text_size"/>
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/character_name"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:gravity="center_horizontal"
+        android:textStyle="bold"
         android:textSize="@dimen/text_size"/>
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/character_status"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:gravity="center_horizontal"
         android:textSize="@dimen/text_size"/>
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/character_species"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:gravity="center_horizontal"
+        android:textSize="@dimen/text_size"/>
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/character_gender"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center_horizontal"
         android:textSize="@dimen/text_size"/>
 
     <androidx.appcompat.widget.AppCompatTextView
@@ -33,34 +46,20 @@
         android:layout_height="match_parent"
         android:onClick="getCharacterbyType"
         android:focusable="false"
+        android:gravity="center_horizontal"
         android:textSize="@dimen/text_size"/>
-
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/character_gender"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:textSize="@dimen/text_size"/>
-
-    <ImageView
-        android:id="@+id/character_img"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:background="#def4e3"
-        android:tag="notLoaded"
-        android:contentDescription="@string/image_desc"
-        />
-
 
     <ToggleButton
-        android:id="@+id/button_favorite"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:id="@+id/button_favoriteCharacter"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:checked="false"
         android:text=""
         android:textOff=""
         android:textOn=""
         android:background="@drawable/button_favorite"
         android:focusable="false"
+        android:gravity="center_horizontal"
         android:onClick="onToggleClickedCharacter"/>
 
 </LinearLayout>
