--- a/app/src/main/res/layout/character_main.xml
+++ b/app/src/main/res/layout/character_main.xml
@@ -9,7 +9,9 @@
         android:id="@+id/character_list"
         android:focusable="true"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:layout_above="@+id/bottom_navigation"
+        android:layout_marginBottom="1dp"/>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
